--- a/app/src/main/res/layout/send_payment.xml
+++ b/app/src/main/res/layout/send_payment.xml
@@ -184,7 +184,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:entries="@array/amount_units"/>
 
     </RelativeLayout>
 
@@ -252,8 +253,7 @@
                 <TextView
                     android:id="@+id/satoshiFee"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0 00 000 000"/>
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -263,7 +263,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/feeAmountGroup"/>
+            android:layout_toEndOf="@id/feeAmountGroup"
+            android:entries="@array/fee_rates"/>
 
     </RelativeLayout>
 
@@ -279,7 +280,6 @@
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="This is the description"/>
+        android:layout_marginTop="5dp"/>
 
 </LinearLayout>
