--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
@@ -9,18 +10,45 @@
         android:id="@+id/scanTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         style="@style/HeadingText"
         android:padding="5dp"
         android:text="@string/scan_payment_code"/>
 
     <tech.nextcash.nextcashwallet.ScannerView
         android:id="@+id/camera"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:layout_below="@id/scanTitle"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/scanTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_centerInParent="true"/>
 
-</RelativeLayout>
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/camera"
+        app:layout_constraintBottom_toBottomOf="@id/camera"
+        app:layout_constraintStart_toStartOf="@id/camera"
+        app:layout_constraintEnd_toEndOf="@id/camera"
+        android:padding="60dp"
+        android:src="@drawable/scan_line"
+        android:layout_centerInParent="true"
+        android:translationZ="1dp"/>
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="@id/camera"
+        app:layout_constraintBottom_toBottomOf="@id/camera"
+        app:layout_constraintStart_toStartOf="@id/camera"
+        app:layout_constraintEnd_toEndOf="@id/camera"
+        android:padding="40dp"
+        android:src="@drawable/scan_box"
+        android:layout_centerInParent="true"
+        android:translationZ="1dp"/>
+
+</android.support.constraint.ConstraintLayout>
