--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -1,41 +1,3 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center">
-
-    <LinearLayout
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/button_background"
-        android:minWidth="200dp"
-        android:onClick="onClick"
-        android:gravity="center"
-        android:text="Test Button">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_scan_white_36dp"
-            android:layout_marginRight="10dp"
-            android:visibility="gone"/>
-
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:textColor="@color/buttonText"
-            android:textAlignment="center"
-            android:text="Test"/>
-
-    </LinearLayout>
-
-</LinearLayout>
+<tech.nextcash.nextcashwallet.Button
+    style="@style/Button"/>
