--- a/app/src/main/res/layout/import_bip32_key.xml
+++ b/app/src/main/res/layout/import_bip32_key.xml
@@ -40,4 +40,9 @@
 
     </LinearLayout>
 
+    <tech.nextcash.nextcashwallet.Button
+        android:id="@+id/loadKey"
+        style="@style/Button"
+        android:text="@string/import_text"/>
+
 </LinearLayout>
