--- a/app/src/main/res/layout/view_seed.xml
+++ b/app/src/main/res/layout/view_seed.xml
@@ -71,4 +71,9 @@
         android:layout_marginTop="10dp"
         android:text="@string/wallet_seed_written"/>
 
+    <tech.nextcash.nextcashwallet.Button
+        android:id="@+id/verifySeedSaved"
+        style="@style/Button"
+        android:text="@string/continue_string"/>
+
 </LinearLayout>
