--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,4 +49,34 @@
         <item name="android:textSize">@dimen/text_size_small</item>
     </style>
 
+    <style name="Button" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@drawable/button_background</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:onClick">onClick</item>
+    </style>
+
+    <style name="ButtonNegative" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">@drawable/negative_button_background</item>
+        <item name="android:minWidth">200dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:onClick">onClick</item>
+    </style>
+
 </resources>
