--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,4 +79,18 @@
         <item name="android:onClick">onClick</item>
     </style>
 
+    <style name="PINButton" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:layout_width">45dp</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:background">@drawable/pin_button_background</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/buttonText</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:onClick">onClick</item>
+    </style>
+
 </resources>
